mdapipkg/objects/Payment_Error__c.object
<CustomObject>
    <fields>
        <fullName>Cybersource_Message__c</fullName>
        <label>Cybersource Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>YPO_Message__c</fullName>
        <label>YPO Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Code__c</columns>
        <columns>Cybersource_Message__c</columns>
        <columns>YPO_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Payment Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>